# mypoc

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/prompts/: plan-agentCopilotApiService.prompt.md  plan-appRestructure.prompt.md  plan-copilotAgentUi.prompt.md  plan-improveCopilotSdkSubAgentOrchestration.prompt.md  plan-improveSubAgentOrchestration.prompt.md
app/: globals.css
app/api/agents/: route.ts
app/copilot-agent/: Dockerfile  README.md  agent.py  agent_copilot.py  api_server.py  pyproject.toml  requirements.txt  xrun.sh
app/copilot-agent/.github/skills/bdd-playwright/: SKILL.md
app/copilot-agent/.github/skills/bdd-scenarios/: SKILL.md
app/copilot-agent/.github/skills/read-jira/: SKILL.md
app/copilot-agent/agents/: ba.agent.md  jira-test-automator.agent.md  playwright-tester.agent.md  test-analyst.agent.md  test-designer.md
app/jira-cli/: jira_cli.py
app/myagent/: README.md  agent.py
components/: agent-chat.tsx  agent-context-panel.tsx  chat-message.tsx  sidebar.tsx
docs/: architecture.drawio  orchestrator-agent-team.html
docs/backup/: 04_process_view.drawio  05_scenario_diagrams.drawio
docs/rag/: 01_conceptual_architecture.drawio  02_logical_architecture.drawio  03_process_view.drawio
lib/: api.ts  types.ts
services/copilot-agent/: .dockerignore  .env.example  README.md  agent_copilot.py  api_server.py  pyproject.toml  requirements.txt
services/copilot-agent/.github/skills/bdd-cucumber-node/: SKILL.md
services/copilot-agent/.github/skills/bdd-pytest/: SKILL.md
services/copilot-agent/.github/skills/read-jira/: SKILL.md  setup.sh
services/copilot-agent/agents/: ba.agent.md  jira-reader.md  jira-test-automator.agent.md  test-analyst.agent.md  test-designer.agent.md
services/copilot-agent/skills/: read-jira.skill.md
services/jira-cli/: README.md  jira_cli.py
services/pnl-engine/: README.md
services/pnl-engine/tests/features/: realised_pnl.feature  scheduler_batch.feature  ui_realised_pnl_trigger.feature  unrealised_pnl.feature
